--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "atmos_cubed_sphere"]
 	path = atmos_cubed_sphere
-	url = https://github.com/NOAA-GSD/GFDL_atmos_cubed_sphere
+	url = https://github.com/haiqinli/GFDL_atmos_cubed_sphere
 	branch = gsd/develop
 [submodule "ccpp/framework"]
 	path = ccpp/framework
-	url = https://github.com/NOAA-GSD/ccpp-framework
-	branch = gsd/develop
+	url = https://github.com/haiqinli/ccpp-framework
+	branch = gsd/develop-chem
 [submodule "ccpp/physics"]
 	path = ccpp/physics
-	url = https://github.com/NOAA-GSD/ccpp-physics
-	branch = gsd/develop
+	url = https://github.com/haiqinli/ccpp-physics
+	branch = gsd/develop-chem
